# knowledge-platform

./: .gitignore  LICENSE  README.md
.github/workflows/: backend-ci.yml
backend/: .env.example  .pre-commit-config.yaml  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
docs/adr/: 0001-adopt-uv.md  0002-use-fastapi.md  README.md  template.md
infra/sam/: template.yaml
